@@ -61,6 +61,11 @@ mencoder \- movie encoder
 .
 .br
 .B mplayer
+[br]://[title][/device]
+[options]
+.
+.br
+.B mplayer
 [dvd|dvdnav]://[title|[start_title]\-end_title][/device]
 [options]
 .
@@ -151,7 +156,7 @@ architectures, see the documentation).
 It plays most MPEG/\:VOB, AVI, ASF/\:WMA/\:WMV, RM, QT/\:MOV/\:MP4, Ogg/\:OGM,
 MKV, VIVO, FLI, NuppelVideo, yuv4mpeg, FILM and RoQ files, supported by many
 native and binary codecs.
-You can watch VCD, SVCD, DVD, 3ivx, DivX 3/4/5, WMV and even H.264 movies,
+You can watch VCD, SVCD, DVD, Blu\-ray, 3ivx, DivX 3/4/5, WMV and even H.264 movies,
 too.
 .PP
 MPlayer supports a wide range of video and audio output drivers.
@@ -249,7 +254,7 @@ Adjust audio balance in favor of left/\:right channel.
 Mute sound.
 .IPs "_ (MPEG-TS, AVI and libavformat only)"
 Cycle through the available video tracks.
-.IPs "# (DVD, MPEG, Matroska, AVI and libavformat only)"
+.IPs "# (DVD, Blu-ray, MPEG, Matroska, AVI and libavformat only)"
 Cycle through the available audio tracks.
 .IPs "TAB (MPEG-TS and libavformat only)"
 Cycle through the available programs.
@@ -940,8 +945,8 @@ Show file parameters in an easily parseable format.
 Also prints more detailed information about subtitle and audio
 track languages and IDs.
 In some cases you can get more information by using \-msglevel identify=6.
-For example, for a DVD it will list the chapters and time length of each title,
-as well as a disk ID.
+For example, for a DVD or Blu\-ray it will list the chapters and time length
+of each title, as well as a disk ID.
 Combine this with \-frames 0 to suppress all video output.
 The wrapper script TOOLS/\:midentify.sh suppresses the other MPlayer output and
 (hopefully) shellescapes the filenames.
@@ -1244,6 +1249,19 @@ able to send content in different bitrates).
 Useful if you want to watch live streamed media behind a slow connection.
 With Real RTSP streaming, it is also used to set the maximum delivery
 bandwidth allowing faster cache filling and stream dumping.
+.
+.TP
+.B \-bluray\-angle <angle ID> (Blu\-ray only)
+Some Blu\-ray discs contain scenes that can be viewed from multiple angles.
+Here you can tell MPlayer which angles to use (default: 1).
+.
+.TP
+.B \-bluray\-chapter <chapter ID> (Blu\-ray only)
+Tells MPlayer which Blu\-ray chapter to start the current title from (default: 1).
+.
+.TP
+.B \-bluray\-device <path to disc> (Blu\-ray only)
+Specify the Blu\-ray disc location. Must be a directory with Blu\-ray structure.
 .
 .TP
 .B \-cache <kBytes>
@@ -11490,6 +11508,13 @@ in this order:
 .\" --------------------------------------------------------------------------
 .
 .SH EXAMPLES OF MPLAYER USAGE
+.
+.PP
+.B Quickstart Blu\-ray playing:
+.nf
+mplayer br:////path/to/disc
+mplayer br:// \-bluray\-device /path/to/disc
+.fi
 .
 .PP
 .B Quickstart DVD playing:
